[tool.poetry]
name = "showtime"
version = "0.1.0"
description = ""
authors = ["Mohamed Muridi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytz = "^2024.2"

[tool.poetry.scripts]
showtime = "showtime.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"